--- a/Ghost Runner/storyBoard/Home.storyboard
+++ b/Ghost Runner/storyBoard/Home.storyboard
@@ -121,52 +121,83 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDc-Ni-MeY">
-                                <rect key="frame" x="354" y="64" width="40" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="5Jh-xB-yqK"/>
-                                    <constraint firstAttribute="height" constant="40" id="riQ-k6-Kjw"/>
-                                </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" image="person.fill.badge.plus" catalog="system"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsd-Dh-0FK">
+                                <rect key="frame" x="192" y="74" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add"/>
                                 <connections>
-                                    <action selector="addFriend" destination="wW2-46-xqN" eventType="touchUpInside" id="djB-c5-Ttv"/>
+                                    <action selector="openAddFriendSheet" destination="wW2-46-xqN" eventType="touchUpInside" id="gxC-gu-J0x"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uCd-5K-TgM">
-                                <rect key="frame" x="0.0" y="112" width="414" height="701"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z4h-6h-5uP">
+                                <rect key="frame" x="20" y="135" width="374" height="615"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="friendCell" id="GDG-Ui-Kej">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GDG-Ui-Kej" id="WX0-gM-Y9A">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AMM-g5-zbQ">
-                                <rect key="frame" x="20" y="70" width="326" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" textContentType="tel"/>
-                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hsH-W3-1qs"/>
                         <color key="backgroundColor" systemColor="labelColor"/>
-                        <constraints>
-                            <constraint firstItem="ZDc-Ni-MeY" firstAttribute="top" secondItem="hsH-W3-1qs" secondAttribute="top" constant="20" id="2Pw-7A-8R1"/>
-                            <constraint firstItem="uCd-5K-TgM" firstAttribute="top" secondItem="AMM-g5-zbQ" secondAttribute="bottom" constant="8" symbolic="YES" id="78P-DW-WN0"/>
-                            <constraint firstItem="uCd-5K-TgM" firstAttribute="trailing" secondItem="hsH-W3-1qs" secondAttribute="trailing" id="Gj4-2H-lGo"/>
-                            <constraint firstItem="uCd-5K-TgM" firstAttribute="leading" secondItem="hsH-W3-1qs" secondAttribute="leading" id="YpM-B2-Bvn"/>
-                            <constraint firstItem="hsH-W3-1qs" firstAttribute="trailing" secondItem="ZDc-Ni-MeY" secondAttribute="trailing" constant="20" id="Z1Z-Yp-1QM"/>
-                            <constraint firstItem="ZDc-Ni-MeY" firstAttribute="leading" secondItem="AMM-g5-zbQ" secondAttribute="trailing" constant="8" symbolic="YES" id="c1V-Yl-Bxh"/>
-                            <constraint firstItem="uCd-5K-TgM" firstAttribute="bottom" secondItem="hsH-W3-1qs" secondAttribute="bottom" id="hri-j2-ixs"/>
-                            <constraint firstItem="AMM-g5-zbQ" firstAttribute="leading" secondItem="hsH-W3-1qs" secondAttribute="leading" constant="20" id="lWN-ee-HnN"/>
-                            <constraint firstItem="uCd-5K-TgM" firstAttribute="top" secondItem="ZDc-Ni-MeY" secondAttribute="bottom" constant="8" symbolic="YES" id="nsE-8I-lQb"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Friends" image="person.fill" catalog="system" id="kjR-l3-ecc">
                         <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBarItem>
                     <connections>
-                        <outlet property="friendCodeField" destination="AMM-g5-zbQ" id="LCt-EU-yF7"/>
+                        <outlet property="friendTable" destination="Z4h-6h-5uP" id="90n-3T-WZN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rr7-mo-cNL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-33.333333333333336" y="255.80357142857142"/>
+        </scene>
+        <!--Friend SearchVC-->
+        <scene sceneID="gu4-Nc-vUF">
+            <objects>
+                <viewController storyboardIdentifier="friendSearchSheet" id="TAu-S4-1tS" customClass="FriendSearchVC" customModule="Ghost_Runner" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B3g-ce-xXF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q4o-Bv-YVe">
+                                <rect key="frame" x="20" y="96" width="374" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="friend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idg-FY-GFA">
+                                <rect key="frame" x="20" y="182" width="374" height="96"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-QQ-FwD">
+                                <rect key="frame" x="20" y="96" width="374" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BJM-pG-J61"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <connections>
+                        <outlet property="addedFriend" destination="Idg-FY-GFA" id="Ssx-pc-OpU"/>
+                        <outlet property="searchBar" destination="WGF-QQ-FwD" id="jil-zs-nPM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FlM-mD-V5l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="757.97101449275374" y="255.80357142857142"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="eZh-44-QDJ">
@@ -191,7 +222,6 @@
     <resources>
         <image name="map.fill" catalog="system" width="128" height="110"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
-        <image name="person.fill.badge.plus" catalog="system" width="128" height="124"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
