--- a/Ghost Runner/storyBoard/Home.storyboard
+++ b/Ghost Runner/storyBoard/Home.storyboard
@@ -121,32 +121,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsd-Dh-0FK">
-                                <rect key="frame" x="192" y="74" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Add"/>
-                                <connections>
-                                    <action selector="openAddFriendSheet" destination="wW2-46-xqN" eventType="touchUpInside" id="gxC-gu-J0x"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z4h-6h-5uP">
-                                <rect key="frame" x="20" y="135" width="374" height="615"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z4h-6h-5uP">
+                                <rect key="frame" x="0.0" y="82" width="414" height="731"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="friendCell" id="GDG-Ui-Kej">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GDG-Ui-Kej" id="WX0-gM-Y9A">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5A-xw-30C">
+                                <rect key="frame" x="163" y="44" width="88" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsd-Dh-0FK">
+                                <rect key="frame" x="364" y="44" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="SSF-lB-o8x"/>
+                                    <constraint firstAttribute="width" constant="30" id="q6q-5b-6qs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <state key="normal" image="person.fill.badge.plus" catalog="system"/>
+                                <connections>
+                                    <action selector="openAddFriendSheet" destination="wW2-46-xqN" eventType="touchUpInside" id="gxC-gu-J0x"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hsH-W3-1qs"/>
-                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Z4h-6h-5uP" firstAttribute="centerX" secondItem="29O-FC-y3g" secondAttribute="centerX" id="34i-tz-mFy"/>
+                            <constraint firstItem="Z4h-6h-5uP" firstAttribute="bottom" secondItem="hsH-W3-1qs" secondAttribute="bottom" id="CLZ-Re-43Y"/>
+                            <constraint firstItem="Z4h-6h-5uP" firstAttribute="trailing" secondItem="hsH-W3-1qs" secondAttribute="trailing" id="Ndh-K0-Cx4"/>
+                            <constraint firstItem="a5A-xw-30C" firstAttribute="top" secondItem="hsH-W3-1qs" secondAttribute="top" id="QZS-al-p6h"/>
+                            <constraint firstItem="hsH-W3-1qs" firstAttribute="trailing" secondItem="xsd-Dh-0FK" secondAttribute="trailing" constant="20" id="UW3-H0-I81"/>
+                            <constraint firstItem="xsd-Dh-0FK" firstAttribute="top" secondItem="hsH-W3-1qs" secondAttribute="top" id="ZHo-mf-kse"/>
+                            <constraint firstItem="Z4h-6h-5uP" firstAttribute="leading" secondItem="hsH-W3-1qs" secondAttribute="leading" id="h1s-SV-QeC"/>
+                            <constraint firstItem="a5A-xw-30C" firstAttribute="centerX" secondItem="29O-FC-y3g" secondAttribute="centerX" id="vGi-ll-kdy"/>
+                            <constraint firstItem="Z4h-6h-5uP" firstAttribute="top" secondItem="xsd-Dh-0FK" secondAttribute="bottom" constant="8" symbolic="YES" id="zob-Az-QVH"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Friends" image="person.fill" catalog="system" id="kjR-l3-ecc">
                         <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -167,28 +188,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q4o-Bv-YVe">
-                                <rect key="frame" x="20" y="96" width="374" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-QQ-FwD">
+                                <rect key="frame" x="20" y="144" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="friend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idg-FY-GFA">
-                                <rect key="frame" x="20" y="182" width="374" height="96"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter their Friend Code." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRs-8K-IkX">
+                                <rect key="frame" x="20" y="64" width="274.5" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="friend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idg-FY-GFA">
+                                <rect key="frame" x="20" y="186" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-QQ-FwD">
-                                <rect key="frame" x="20" y="96" width="374" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="BJM-pG-J61"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Idg-FY-GFA" firstAttribute="centerX" secondItem="B3g-ce-xXF" secondAttribute="centerX" id="DMd-Sn-lxg"/>
+                            <constraint firstItem="kRs-8K-IkX" firstAttribute="top" secondItem="BJM-pG-J61" secondAttribute="top" constant="20" id="Gh5-rn-NAv"/>
+                            <constraint firstItem="kRs-8K-IkX" firstAttribute="leading" secondItem="BJM-pG-J61" secondAttribute="leading" constant="20" id="Hhh-fg-dpf"/>
+                            <constraint firstItem="WGF-QQ-FwD" firstAttribute="leading" secondItem="BJM-pG-J61" secondAttribute="leading" constant="20" id="OVS-UW-HPP"/>
+                            <constraint firstItem="WGF-QQ-FwD" firstAttribute="centerX" secondItem="B3g-ce-xXF" secondAttribute="centerX" id="Q6r-Vt-r7L"/>
+                            <constraint firstItem="Idg-FY-GFA" firstAttribute="top" secondItem="WGF-QQ-FwD" secondAttribute="bottom" constant="8" symbolic="YES" id="UNL-5a-GYx"/>
+                            <constraint firstItem="Idg-FY-GFA" firstAttribute="leading" secondItem="BJM-pG-J61" secondAttribute="leading" constant="20" id="ZHg-YY-9Zw"/>
+                            <constraint firstItem="WGF-QQ-FwD" firstAttribute="top" secondItem="kRs-8K-IkX" secondAttribute="bottom" constant="50" id="lGW-o4-2Jl"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="addedFriend" destination="Idg-FY-GFA" id="Ssx-pc-OpU"/>
@@ -222,6 +251,7 @@
     <resources>
         <image name="map.fill" catalog="system" width="128" height="110"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="person.fill.badge.plus" catalog="system" width="128" height="124"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
